--- a/src/sass/setting/_variables.scss
+++ b/src/sass/setting/_variables.scss
@@ -1,6 +1,13 @@
 // 色
-$background: #fff; // 背景
-$text-color: #333; // テキスト色
+$background: #111; // 背景
+$background-gray: #333; // 背景（灰）
+$background-alert: #FFDCDC; //背景（注意喚起）
+$text-white: #fff; // テキスト色（白）
+$text-black: #333; // テキスト色（黒）
+$text-alert: #FF5757; // テキスト色（注意喚起）
+$main-color: #F9F871; //メインカラー
+$accent-color1: #FFEA2E; //タグ・ライン色
+$accent-color2: #FFBA6A; //ラベル色
 
 // マウスホバー
 $opacity: 0.7; // 透過度
@@ -15,7 +22,7 @@ $lh: 1.6; // ベース行間
 // レイアウト
 // ---
 $l-tab: 768px; // タブレットサイズ
-$l-inner: 1000px; // インナー幅
+$l-inner: 1100px; // インナー幅
 $l-pc: 1440px; // パソコン幅
 
 // ブレークポイント（PC基準）
