--- a/src/ejs/common/_head.ejs
+++ b/src/ejs/common/_head.ejs
@@ -17,6 +17,11 @@
   <meta name="twitter:card" content="summary" />
   <!-- ファビコン -->
   <link rel="icon" href="#" />
+  <!-- Googleフォント読み込み -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&display=swap" rel="stylesheet">
   <!-- css -->
   <link rel="stylesheet" href="./css/style.css" />
   <!-- JavaScript -->
