--- a/src/sass/object/component/_c-btn.scss
+++ b/src/sass/object/component/_c-btn.scss
@@ -1,5 +1,48 @@
 .c-btn {
-  padding: rem(10) rem(40);
-  background-color: black;
-  color: white;
+  font-size: rem(20);
+  font-weight: $medium;
+  letter-spacing: rem(2);
+  color: $text-white;
+  background: $background-gray;
+  border: rem(1) solid #fff;
+  display: inline-block;
+  padding: rem(10) rem(80);
+  text-align: center;
+  max-width: rem(360);
+  width: 100%;
+  position: relative;
+  overflow: hidden;
+
+  @include mq("md") {
+    font-size: rem(16);
+    line-height: rem(54);
+    letter-spacing: rem(2);
+    padding: rem(3) rem(100);
+  }
+}
+
+.c-btn::before {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: -100%;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  transition: all 0.3s ease;
+}
+
+.c-btn:focus,
+.c-btn:hover {
+  color: $text-white;
+
+  @include mq("md") {
+    color: $background-gray;
+  }
+}
+
+.c-btn:focus::before,
+.c-btn:hover::before {
+  left: 0;
 }
