--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -11,5 +11,8 @@
       <%- include('./parts/_c-btn',{text:'これはテストです', link:'#'}) %>
       <% } %>
 
+
+
+    <%- include('./parts/_p-blog-cards') %>
   </body>
 </html>
