--- a/src/sass/setting/_variables.scss
+++ b/src/sass/setting/_variables.scss
@@ -1,6 +1,7 @@
 // 色
 $background: #111; // 背景
 $background-gray: #333; // 背景（灰）
+$background-white: #fff; // テキスト色（白）
 $background-alert: #FFDCDC; //背景（注意喚起）
 $text-white: #fff; // テキスト色（白）
 $text-black: #333; // テキスト色（黒）
