--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -13,6 +13,11 @@
 
 
 
-    <%- include('./parts/_p-blog-cards') %>
+      <%- include('./parts/_c-blog-title',{text:'これはタイトルです'}) %>
+      <%- include('./parts/_c-blog-title2',{text:'これはタイトル2です'}) %>
+      <%- include('./parts/_c-blog-title3',{text:'これはタイトル3です'}) %>
+      <%- include('./parts/_c-blog-text',{text:'これはテキストです'}) %>
+      <%- include('./parts/_p-blog-listNumber',{text:'これはテキストです'}) %>
+      <%- include('./parts/_p-blog-listDot',{text:'これはテキストです'}) %>
   </body>
 </html>
