セクションタイトル追加

--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -11,6 +11,9 @@
       <%- include('./parts/_c-btn',{text:'これはテストです', link:'#'}) %>
       <% } %>
 
+      <%- include('./parts/_c-section-title',{text:'セクションタイトル'}) %>
+      
+      
 
   </body>
 </html>
