--- a/src/sass/object/component/_c-test.scss
+++ b/src/sass/object/component/_c-test.scss
@@ -1,14 +1,4 @@
 .c-test {
-	color: red;
-	font-size: rem(20);
-	@include mq(tab){
-	font-size: rem(50);
-		color: green;
-	}
-	@include mq(pc) {
-		color: blue;
-	}
-	@include mq(lg) {
-		color: brown;
-	}
+	padding: 40px 0;
+	margin: 120px 0;
 }
