--- a/src/sass/object/project/_p-blog-listNumber.scss
+++ b/src/sass/object/project/_p-blog-listNumber.scss
@@ -1,7 +1,7 @@
 .p-blog-listNumber{
   line-height: rem(35);
   letter-spacing: (0.4);
-  color: #fff;
+  color: $text-white;
   position: relative;
   counter-reset: number;
 }
