--- a/src/sass/object/project/_p-blog-listDot.scss
+++ b/src/sass/object/project/_p-blog-listDot.scss
@@ -1,7 +1,7 @@
 .p-blog-listDot li{
   line-height: rem(35);
   letter-spacing: (0.4);
-  color: #fff;
+  color: $text-white;
   margin-left: rem(24);
   list-style-type: disc;
 }
