--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -2,7 +2,7 @@
 <html lang="ja">
 <%- include('./common/_head') %>
   <body>
-    <%- include('./common/_top-header') %>
+    <%- include('./common/_header') %>
       <%- include('./parts/_c-btn',{text:'これはテストです', link:'#'}) %>
 
 
@@ -21,7 +21,9 @@
 
         </div>
 
-        <%- include('./parts/_p-news-item',{time:'2021.07.20', category:'カテゴリ', title:'記事タイトルが入ります。記事タイトルが入ります。記事タイトルが入ります。'}) %>
+        <div class="section">
+          
+        </div>
 
     <%- include('./common/_footer') %>
   </body>
