--- a/src/ejs/parts/_c-hamburger.ejs
+++ b/src/ejs/parts/_c-hamburger.ejs
@@ -1,4 +1,4 @@
-<div class="c-hamburger js-hamburger u-hidden-pc">
+<div class="c-hamburger js-hamburger">
   <span></span>
   <span></span>
   <span></span>
