--- a/src/ejs/parts/_p-header-nav.ejs
+++ b/src/ejs/parts/_p-header-nav.ejs
@@ -1,4 +1,4 @@
-<ul class="p-header__nav u-hidden-sp">
+<ul class="p-header__nav">
   <li class="p-header__item">
     <a href="" class="p-header__link">
       お知らせ
@@ -25,7 +25,7 @@
     </a>
   </li>
   <li class="p-header__item">
-    <a href="" class="p-header__link">
+    <a href="" class="p-header__link p-header__link--black">
       お問い合わせ
     </a>
   </li>
