--- a/src/sass/object/component/_c-section-title.scss
+++ b/src/sass/object/component/_c-section-title.scss
@@ -34,7 +34,7 @@
   }
 }
 
-.c-section-title.c-section-title--reverse::before {
+.c-section-title--reverse::before {
   content: attr(title-en);
   font-family: $font-family-sub;
   font-size: rem(50);
@@ -50,7 +50,7 @@
   @include mq(tab) {
     font-size: rem(110);
     letter-spacing: 0.01818em;
-    left: 0%;
+    left: auto;
     right: 7%;
     transform: translate(0%, -38%);
   }
