--- a/CodeUps Team Project 6/assets/css/style.css
+++ b/CodeUps Team Project 6/assets/css/style.css
@@ -593,6 +593,25 @@ summary {
 	line-height: 2.1875rem;
 }
 
+.c-breadcrumb {
+	display: flex;
+}
+
+.c-breadcrumb span,
+.c-breadcrumb a {
+	font-size: 1rem;
+}
+
+.c-breadcrumb span:not(:last-child)::after {
+	content: ">";
+	margin: 0 0.375rem;
+	vertical-align: baseline;
+}
+
+.c-breadcrumb span > a {
+	text-decoration: none;
+}
+
 .c-btn {
 	background: #333;
 	border: 0.0625rem solid #fff;
@@ -631,6 +650,10 @@ summary {
 	left: 0;
 }
 
+.c-label-large {
+	width: 100%;
+}
+
 .c-section-title {
 	font-family: "Noto Sans JP", sans-serif;
 	font-size: 1.25rem;
@@ -656,7 +679,7 @@ summary {
 	transform: translate(-50%, -83%);
 }
 
-.c-section-title.c-section-title--reverse::before {
+.c-section-title--reverse::before {
 	color: rgba(249, 248, 113, 0.2);
 	content: attr(title-en);
 	font-family: "Noto Serif JP", serif;
@@ -713,6 +736,43 @@ summary {
 	position: absolute;
 	width: 30%;
 	z-index: 10;
+}
+
+.c-page-top-button {
+	background-color: #FFF;
+	display: inline-block;
+	height: 2.8125rem;
+	position: relative;
+	transition: all .3s;
+	width: 2.8125rem;
+}
+
+.c-page-top-button:hover {
+	background-color: #333;
+	transition: all .3s;
+}
+
+.c-page-top-button::before {
+	border-right: solid 2px #333;
+	border-top: solid 2px #333;
+	content: '';
+	height: 1.1875rem;
+	left: 28%;
+	position: absolute;
+	top: 40%;
+	transform: rotate(-45deg);
+	transition: all .3s;
+	width: 1.1875rem;
+}
+
+.c-page-top-button:hover::before {
+	border-right: solid 2px #fff;
+	border-top: solid 2px #fff;
+	transition: all .3s;
+}
+
+.l-page-top-button {
+	margin-left: 20px;
 }
 
 .p-blog-card {
@@ -781,9 +841,184 @@ summary {
 	padding-right: 5px;
 }
 
+.p-panel {
+	position: relative;
+}
+
+.p-panel:hover::before {
+	background-color: rgba(255, 255, 255, 0.6);
+	content: "";
+	height: 100%;
+	left: 0;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	z-index: 1;
+}
+
+.p-panel__inner {
+	display: -ms-grid;
+	display: grid;
+}
+
+.p-panel__image {
+	-ms-grid-row: 1;
+	grid-area: 1/-1;
+	padding-top: 89.3617%;
+	position: relative;
+}
+
+.p-panel__image img {
+	-o-object-fit: cover;
+	-o-object-position: center;
+	height: 100%;
+	left: 0;
+	object-fit: cover;
+	object-position: center;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
+.p-panel__text {
+	-ms-grid-row: 1;
+	align-items: center;
+	display: flex;
+	font-family: "Noto Sans JP", sans-serif;
+	font-size: 1.25rem;
+	grid-area: 1/-1;
+	justify-content: center;
+	letter-spacing: 0.1em;
+	text-align: center;
+	z-index: 1;
+}
+
+.p-panels {
+	-ms-grid-rows: auto auto;
+	-ms-grid-columns: auto auto;
+	display: -ms-grid;
+	display: grid;
+	grid-template: auto auto / auto auto;
+}
+
+.p-sort {
+	width: 100%;
+}
+
+.p-sort__tab {
+	cursor: pointer;
+	display: inline-block;
+	font-size: 1rem;
+	letter-spacing: 0.125em;
+	line-height: 1;
+	padding: 0.1875rem 0.625rem;
+}
+
+.p-sort__tab.is-active {
+	background-color: #fff;
+	color: #333;
+}
+
+.p-sp-nav {
+	background-color: #111;
+	height: 100vh;
+	left: 0;
+	position: absolute;
+	right: 0;
+	text-align: center;
+	top: 0;
+	transform: translateX(100%);
+	transition: ease 0.3s;
+	width: 100%;
+	z-index: 999;
+}
+
+.p-sp-nav.is-open {
+	transform: translateX(0);
+}
+
+.p-sp-nav__items {
+	height: 100vh;
+	overflow: scroll;
+	padding-bottom: 13rem;
+	padding-top: 13.0625rem;
+}
+
+.p-sp-nav__item > a {
+	display: inline-block;
+	font-size: 1rem;
+	letter-spacing: 0.125em;
+	line-height: 1.4375;
+	padding: 1rem 0;
+	width: 100%;
+}
+
+.p-sp-nav__item > a:hover {
+	background-color: #333;
+}
+
 .p-test {
 	color: red;
 	font-size: 1.25rem;
+}
+
+.p-works-card__inner {
+	display: -ms-grid;
+	display: grid;
+}
+
+.p-works-card__image {
+	-ms-grid-row: 1;
+	grid-area: 1/-1;
+	position: relative;
+	width: 100%;
+}
+
+.p-works-card__image::before {
+	content: "";
+	display: block;
+	padding-top: 66.4%;
+	position: relative;
+}
+
+.p-works-card__image img {
+	-o-object-fit: cover;
+	-o-object-position: center;
+	height: 100%;
+	left: 0;
+	object-fit: cover;
+	object-position: center;
+	position: absolute;
+	top: 0;
+	width: 100%;
+}
+
+.p-works-card__label {
+	-ms-grid-row: 1;
+	-ms-grid-row-align: start;
+	-ms-grid-column-align: end;
+	align-self: start;
+	background-color: #111;
+	color: #fff;
+	display: inline-block;
+	font-size: 1rem;
+	grid-area: 1/-1;
+	justify-self: end;
+	letter-spacing: 0.125em;
+	line-height: 1.5;
+	padding: 0.5rem 1.25rem;
+	z-index: 1;
+}
+
+.p-works-card__text {
+	display: inline-block;
+	font-family: "Noto Sans JP", sans-serif;
+	font-size: 1.25rem;
+	font-weight: 500;
+	letter-spacing: 0.1em;
+	line-height: 1.75;
+	padding-top: 1.5rem;
+	text-align: center;
 }
 
 .test {
@@ -858,12 +1093,27 @@ html {
 	transform: translate(0%, -38%);
 }
 
-.c-section-title.c-section-title--reverse::before {
+.c-section-title--reverse::before {
 	font-size: 6.875rem;
-	left: 0%;
+	left: auto;
 	letter-spacing: 0.01818em;
 	right: 7%;
 	transform: translate(0%, -38%);
+}
+
+.p-panel__image {
+	padding-top: 100%;
+}
+
+.p-panel__text {
+	font-size: 1.5625rem;
+	letter-spacing: 0.08em;
+}
+
+.p-panels {
+	-ms-grid-rows: auto;
+	-ms-grid-columns: auto auto auto auto;
+	grid-template: auto / auto auto auto auto;
 }
 
 .p-test {
