--- a/src/ejs/parts/_p-header-nav.ejs
+++ b/src/ejs/parts/_p-header-nav.ejs
@@ -25,7 +25,7 @@
     </a>
   </li>
   <li class="p-header__item">
-    <a href="" class="p-header__link p-header__link--black">
+    <a href="" class="p-header__link p-header__link--white">
       お問い合わせ
     </a>
   </li>
