--- a/src/ejs/index.ejs
+++ b/src/ejs/index.ejs
@@ -35,6 +35,19 @@
 
         <%- include('./parts/_p-works-card',{link:'./images/works/works_1.jpg', label:'カテゴリ１' , text:'CodeUps株式会社'}) %>
 
+        <div class="l-inner">
+
+          <%- include('./parts/_c-label-large',{text:'おすすめ記事'}) %>
+
+          <%- include('./parts/_p-works-textarea',{heading:'制作のポイント', text:'テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。'}) %>
+
+        </div>
+
+        <div class="p-gallery">
+          <%- include('./parts/_p-gallery-slider') %>
+          <%- include('./parts/_p-gallery-thumbs') %>
+        </div>
+
         <div class="l-page-top-button">
           <%- include('./parts/_c-page-top-button') %>
         </div>
