--- a/src/ejs/parts/_p-gallery-slider.ejs
+++ b/src/ejs/parts/_p-gallery-slider.ejs
@@ -1,4 +1,4 @@
-<div class="swiper p-gallery-slider js-gallery-slider">
+<div class="swiper-container p-gallery-slider js-gallery-slider">
     <div class="swiper-wrapper">
         <div class="swiper-slide"><img src="./images/works/works_deatil_1.jpg" alt=""></div>
         <div class="swiper-slide"><img src="./images/works/works_deatil_2.jpg" alt=""></div>
