--- a/src/ejs/parts/_p-panel.ejs
+++ b/src/ejs/parts/_p-panel.ejs
@@ -1,5 +1,4 @@
-<div class="p-panel">
-  <a href="">
+  <a href="#" class="p-panel">
     <div class="p-panel__inner">
       <div class="p-panel__image">
         <img src="<%= link %>" alt="<%= text %>">
@@ -7,4 +6,3 @@
       <p class="p-panel__text"><%= text %></p>
     </div>
   </a>
-</div>
