--- a/CodeUps Team Project 6/assets/css/style.css
+++ b/CodeUps Team Project 6/assets/css/style.css
@@ -595,6 +595,30 @@ summary {
 	width: 100%;
 }
 
+.l-scroll-top {
+	bottom: 2.5625rem;
+	position: fixed;
+	right: 1.3125rem;
+	z-index: 9999;
+}
+
+.l-top-blog {
+	margin-top: 3rem;
+}
+
+.l-top-contact {
+	margin: 7.5rem calc(50% - 50vw) 0;
+	width: 100vw;
+}
+
+.l-top-overview {
+	margin-top: 4.4375rem;
+}
+
+.l-top-works {
+	margin-top: 4.4375rem;
+}
+
 .c-blog-text {
 	color: #fff;
 	letter-spacing: 0.025rem;
@@ -1289,6 +1313,87 @@ summary {
 	width: 4.375rem;
 }
 
+.p-mainvisual {
+	height: 100vh;
+	position: relative;
+	width: 100%;
+}
+
+.p-mainvisual__content {
+	color: #fff;
+	font-weight: 700;
+	left: 0;
+	padding: 0 1.5625rem;
+	position: absolute;
+	text-align: center;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 100%;
+	z-index: 2;
+}
+
+.p-mainvisual__title {
+	font-size: 2em;
+}
+
+.p-mainvisual__lead {
+	font-size: 1em;
+	margin-top: 0.6em;
+}
+
+.p-mainvisual__image img {
+	-o-object-fit: cover;
+	-o-object-position: center;
+	height: 100%;
+	object-fit: cover;
+	object-position: center;
+	width: 100%;
+}
+
+.p-mainvisual__image::before {
+	background: #111;
+	content: "";
+	height: 100%;
+	opacity: 0.2;
+	position: absolute;
+	width: 100%;
+	z-index: 2;
+}
+
+.p-mainvisual-swiper {
+	height: 100vh;
+	overflow: hidden;
+	width: 100%;
+}
+
+.p-mainvisual-swiper .swiper-slide-active img,
+.p-mainvisual-swiper .swiper-slide-duplicate-active img,
+.p-mainvisual-swiper .swiper-slide-prev img {
+	-webkit-animation: zoomUp 12s linear 0s;
+	-webkit-animation-fill-mode: both;
+	animation: zoomUp 12s linear 0s;
+	animation-fill-mode: both;
+}
+
+.p-mainvisual-swiper .swiper-slide {
+	-webkit-backface-visibility: hidden;
+	backface-visibility: hidden;
+	overflow: hidden;
+}
+
+.p-mainvisual-swiper img {
+	-o-object-fit: cover;
+	background-position: center center;
+	background-size: cover;
+	object-fit: cover;
+}
+
+.p-mainvisual-swiper .swiper-pagination-bullet {
+	--swiper-theme-color: #fff;
+	--swiper-pagination-bullet-size: 8px;
+	--swiper-pagination-bullet-horizontal-gap: 4px;
+}
+
 .p-news-item__category {
 	border: 0.0625rem #fff solid;
 	font-size: 0.875rem;
@@ -1299,69 +1404,12 @@ summary {
 .p-news-item__title a {
 	font-size: 1rem;
 	font-weight: 400;
+	line-height: calc(23.17/16);
 	transition: color .3s ease;
 }
 
 .p-news-item__title a:hover {
 	color: #F9F871;
-}
-
-.p-news-item__category {
-	border: 0.0625rem #fff solid;
-	font-size: 0.875rem;
-	margin-left: 1.8125rem;
-	padding: 0.375rem 1.375rem;
-}
-
-.p-news-item__title a {
-	font-size: 1rem;
-	font-weight: 400;
-	transition: color .3s ease;
-}
-
-.p-news-item__title a:hover {
-	color: #F9F871;
-}
-
-.wp-pagenavi a,
-.wp-pagenavi span {
-	border: 0.0625rem solid #fff;
-	line-height: 1.6875rem;
-}
-
-.wp-pagenavi a {
-	transition: all .3s ease;
-}
-
-.wp-pagenavi .previouspostslink,
-.nextpostslink {
-	padding: 0 0.8125rem;
-}
-
-.wp-pagenavi .previouspostslink {
-	margin-right: 1.5rem;
-}
-
-.nextpostslink {
-	margin-left: 1.5rem;
-}
-
-.wp-pagenavi .page {
-	padding: 0 0.5rem;
-}
-
-.wp-pagenavi .page:not(:nth-of-type(1)) {
-	margin-left: 1rem;
-}
-
-.wp-pagenavi .current {
-	background: #fff;
-	color: #333;
-}
-
-.wp-pagenavi a:hover {
-	background: #fff;
-	color: #333;
 }
 
 .wp-pagenavi a,
@@ -1458,11 +1506,58 @@ summary {
 }
 
 .p-panels {
-	-ms-grid-rows: auto auto;
-	-ms-grid-columns: auto auto;
+	-ms-grid-rows: 50% 50%;
+	-ms-grid-columns: 50% 50%;
 	display: -ms-grid;
 	display: grid;
-	grid-template: auto auto / auto auto;
+	grid-template: 50% 50% / 50% 50%;
+}
+
+.p-scroll-top {
+	font-size: 0;
+	line-height: 1;
+}
+
+.p-section-body {
+	background-color: #333;
+	padding: 1.5rem 1.25rem 1.3125rem;
+	width: 100%;
+}
+
+.p-section-body__title {
+	font-size: 1.25rem;
+	font-weight: 400;
+	letter-spacing: 0.1em;
+	line-height: calc(28.96 / 20);
+	text-align: center;
+}
+
+.p-section-body__text {
+	font-size: 1rem;
+	font-weight: 400;
+	letter-spacing: 0.125em;
+	line-height: calc(23.17 / 16);
+	margin-top: 1.5rem;
+}
+
+.p-section-body__button {
+	margin-top: 1rem;
+}
+
+.p-section-contact__body {
+	padding: 0 20px;
+}
+
+.p-section-contact__text {
+	font-size: 1rem;
+	font-weight: 400;
+	letter-spacing: 0.125em;
+	line-height: calc(23.17 / 16);
+	margin-top: 1.25rem;
+}
+
+.p-section-contact__button {
+	margin-top: 2.5rem;
 }
 
 .p-sort {
@@ -1524,6 +1619,88 @@ summary {
 .p-test {
 	color: red;
 	font-size: 1.25rem;
+}
+
+.p-top-blog {
+	padding-top: 3.1875rem;
+}
+
+.p-top-contact {
+	background-color: #333;
+	padding: 4.1875rem 0 4rem;
+}
+
+.p-top-content {
+	padding-top: 3.125rem;
+	position: relative;
+	width: 100%;
+	z-index: -1;
+}
+
+.p-top-content::before {
+	background-color: #F9F871;
+	content: "";
+	height: calc(776 / 375 * 100vw);
+	left: 50%;
+	position: absolute;
+	top: -2rem;
+	transform: rotate(-29deg);
+	width: 1px;
+}
+
+.p-top-content__panels {
+	margin-top: 3rem;
+	width: 100%;
+}
+
+.p-top-news {
+	padding: 1.5rem 0 6.3125rem;
+}
+
+.p-top-news__button {
+	margin-top: 1.75rem;
+}
+
+.p-top-overview {
+	padding-top: 3.0625rem;
+}
+
+.p-top-overview__content {
+	margin-top: 3rem;
+}
+
+.p-top-overview__image,
+.p-top-overview__body {
+	margin: 0 calc(50% - 50vw);
+	width: 100vw;
+}
+
+.p-top-works {
+	padding-top: 3.0625rem;
+	position: relative;
+	z-index: -1;
+}
+
+.p-top-works::before {
+	background-color: #F9F871;
+	content: "";
+	height: calc(1448 / 375 * 100vw);
+	left: 50%;
+	position: absolute;
+	top: 10.5rem;
+	transform: rotate(15deg);
+	width: 1px;
+	z-index: -1;
+}
+
+.p-top-works__content {
+	margin-top: 3rem;
+}
+
+.p-top-works__image,
+.p-top-works__body {
+	margin: 0 calc(50% - 50vw);
+	width: 100vw;
 }
 
 .p-works-card__inner {
@@ -1829,18 +2006,6 @@ html {
 	margin-left: 3.8125rem;
 }
 
-.p-news-item {
-	display: flex;
-}
-
-.p-news-item__category {
-	margin-left: 3rem;
-}
-
-.p-news-item__title a {
-	margin-left: 3.8125rem;
-}
-
 .p-panel__image {
 	padding-top: 100%;
 }
@@ -1859,6 +2024,20 @@ html {
 .p-test {
 	color: green;
 	font-size: 3.125rem;
+}
+
+.p-top-content::before {
+	height: calc(1714 / 1280 * 100vw);
+	left: 47.3%;
+	top: -15.75rem;
+	transform: rotate(-45deg);
+}
+
+.p-top-works::before {
+	height: calc(1712.34 / 1280 * 100vw);
+	left: 47.3%;
+	top: 26.25rem;
+	transform: rotate(45deg);
 }
 
 .p-works-textarea__heading {
@@ -1923,6 +2102,30 @@ html {
 
 .p-test {
 	color: brown;
+}
+
+}
+
+@-webkit-keyframes zoomUp {
+
+0% {
+	transform: scale(1);
+}
+
+100% {
+	transform: scale(1.15);
+}
+
+}
+
+@keyframes zoomUp {
+
+0% {
+	transform: scale(1);
+}
+
+100% {
+	transform: scale(1.15);
 }
 
 }
