--- a/src/ejs/blog.ejs
+++ b/src/ejs/blog.ejs
@@ -8,15 +8,14 @@
 
 
     <!-- ブログ一覧 -->
-    <section class="p-blog">
-
+    <section class="l-blog p-blog l-inner">
       <!-- タブ -->
       <div class="p-blog__tab">
 
       </div>
 
       <!-- ブログカード一覧 -->
-      <div class="p-blog__cards">
+      <div class="p-blog__content">
         <%- include('./parts/_p-blog-cards.ejs') %>
       </div>
 
