--- a/src/ejs/parts/_p-blog-card.ejs
+++ b/src/ejs/parts/_p-blog-card.ejs
@@ -1,8 +1,8 @@
 <div class="p-blog-card">
   <a href="<%= link %>" class="p-blog-card__wrapper">
-    <div class="p-blog-card__img">
+    <figure class="p-blog-card__img">
       <img src="images/blog/<%= img %>" alt="ブログのサムネイル">
-    </div>
+    </figure>
     <div class="p-blog-card__content">
       <h2 class="p-blog-card__title">
         <%= title %>
