--- a/src/ejs/parts/_p-pagination.ejs
+++ b/src/ejs/parts/_p-pagination.ejs
@@ -1,8 +1,21 @@
 <div class="p-pagenation wp-pagenavi">
-  <a href="" class="previouspostslink">PREV</a>
+  <span href="" class="previouspostslink">PREV</a>
   <span class="current page">1</span>
   <a href="" class="page">2</a>
   <a href="" class="page">3</a>
   <a href="" class="page">4</a>
   <a href="" class="nextpostslink">NEXT</a>
 </div>
+
+<nav class="pagination">
+  <ul class="page-numbers">
+  <li><span class="prev page-numbers" href="./"></span></li>
+	<li><span aria-current="page" class="page-numbers current">1</span></li>
+	<li><a class="page-numbers" href="./">2</a></li>
+	<li><a class="page-numbers" href="./">3</a></li>
+	<li><a class="page-numbers" href="./">4</a></li>
+	<li><a class="page-numbers" href="./">12</a></li>
+	<li><a class="next page-numbers" href="./"></a>
+  </li>
+  </ul>
+</nav>
