--- a/src/sass/object/project/_p-blog-cards.scss
+++ b/src/sass/object/project/_p-blog-cards.scss
@@ -1,5 +1,21 @@
-.p-blog__cards{
-  max-width: rem(1099);
+.p-blog-cards__wrapper{
   display: flex;
   flex-wrap: wrap;
+  margin-right: rem(-25);
+}
+
+.p-blog-cards__item{
+
+  @include mq(tab) {
+    width: calc(50% - rem(24));
+  }
+
+  @include mq(pc) {
+    width: calc(33.3% - #{rem(25)});
+  }
+}
+
+.p-blog-cards__item{
+  margin-right: rem(25);
+  margin-bottom: rem(48);
 }
